feat: adding prayer_book selection
